[package]
name = "hlwall"
version = "0.0.1"
authors = ["Fedcomp"]
edition = "2018"

[dependencies]
bytes = "0.5.4"
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["codec", "udp"] }
anyhow = "1.0.26"
byteorder = "1.3.4"
thiserror = "1.0.10"
futures = "0.3.4"
