[package]
name = "hlwall"
description = "Source query cacher"
version = "0.0.1"
authors = ["Fedcomp"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.1"
bytes = "0.5.4"
byteorder = "1.3.4"
thiserror = "1.0.11"
anyhow = "1.0.26"
ttl_cache = "0.5.1"
structopt = "0.3.9"
better-panic = "0.2.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "flood"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
